--- a/pccc/knowledge.html
+++ b/pccc/knowledge.html
@@ -161,70 +161,62 @@
         </div>
 
         <div class="row main-banner">
-            <img src="dist/images/image-gallery-banner.jpg" alt="">
+            <img src="dist/images/knowledge-banner.png" alt="">
         </div>
 
-        <div class="row content-wrapper contact-page">
+        <div class="row content-wrapper knowledge-page">
             <div class="col-sm-8 main-content">
                 <div class="row">
                     <div class="panel panel-default box">
                         <div class="panel-heading">
-                            <h3 class="panel-title box-header">Liên hệ</h3>
+                            <h3 class="panel-title box-header">Phổ biến kiến thức » Khoa học công nghệ</h3>
                         </div>
                         <div class="panel-body box-content">
-                            <h5 class="title">CẢNH SÁT PC & CC TỈNH BÌNH DƯƠNG</h5>
-                            <p>Địa chỉ : 664, Đại Lộ Bình Dương, Phường  Hiệp Thành, Thành Phố Thủ Dầu Một, Bình Dương</p>
-                            <p>Số điện thoại: 06503.819.799 – 0693.509.905</p>
-                            <p>Email: cspccc@binhduong.gov.vn</p>
+                            <div class="list-item">
+                                <div class="row item">
+                                    <div class="col-sm-12 right-content">
+                                        <a href="news-and-events-detail.html" class="title"><h5>HỘI NGHỊ TẬP HUẤN TRIỂN KHAI MẠNG TIN HỌC NỘI BỘ NGHÀNH CÔNG AN.</h5></a>
+                                        <span class="date">01/01/2016</span>
+                                        <p class="content">Ngày 17/4/2014 Cảnh sát PC&CC tỉnh Bình Dương đã tổ chức hội nghị tập huấn triển khai mạng tin học nội bộ nghành công an tại Cảnh sát PC&CC tỉnh Bình Dương. Nhằm tăng cường sử dụng văn bản điện tử như một hoạt động cải cách hành chính, phát triển Chính phủ điện tử […]</p>
+                                    </div>
+                                    <div class="read-more">
+                                        <a href="news-and-events-detail.html">Xem chi tiết <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
 
-                            <h5 class="table-title">DANH SÁCH CÁC PHÒNG TRỰC THUỘC CẢNH SÁT PC&CC TỈNH BÌNH DƯƠNG</h5>
-                            <div class="">
-                                <table class="table table-bordered">
-                                    <thead>
-                                        <tr>
-                                            <th class="text-center">TÊN ĐƠN VỊ</th>
-                                            <th class="text-center">LIÊN HỆ</th>
-                                            <th class="text-center">ĐỊA BÀN QUẢN LÝ</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>Phòng Cảnh sát PC&CC Số 1</td>
-                                            <td>664 Đại lộ Bình Dương, phường Hiệp Thành, thành phố Thủ Dầu Một (ĐT: 0693.509.971; Fax: 06503.844.688)</td>
-                                            <td>Thành phố Thủ Dầu Một</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Phòng Cảnh sát PC&CC Số 2</td>
-                                            <td>Đại lộ Độc lập, khu công nghiệp VSIP I, thị xã Thuận An (ĐT: 06503.765.755; Fax: 06503.765.556)</td>
-                                            <td>Thị xã Thuận An</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Phòng Cảnh sát PC&CC Số 3</td>
-                                            <td>Đường T, khu phố Nhị Đồng 2, phường Dĩ An, thị xã Dĩ An (ĐT: 06503.796.991; Fax: 06503.796.991)</td>
-                                            <td>Thị xã Dĩ An</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Phòng Cảnh sát PC&CC Số 4</td>
-                                            <td>Đường D1, khu công nghiệp Mỹ Phước, thị trấn Mỹ Phước, thị xã Bến Cát (ĐT: 06503.557.514; Fax: 06503.557.518)</td>
-                                            <td>Thị xã Bến Cát; Huyện Dầu Tiếng</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Phòng Cảnh sát PC&CC Số 5</td>
-                                            <td>Đường D4, khu công nghiệp Nam Tân Uyên, phường Khánh Bình, thị xã Tân Uyên (ĐT: 06503.653.764; Fax: 06503.653.763)</td>
-                                            <td>Thị xã Tân Uyên; Huyện Phú Giáo, Huyện Bắc Tân Uyên</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Phòng Cảnh sát PC&CC Số 6</td>
-                                            <td>Quốc lộ 13, khu công nghiệp Bàu Bàng, xã Lai Uyên, huyện Bàu Bàng (ĐT: 06503.516.779; Fax: 06503.516.778)</td>
-                                            <td>Huyện Bàu Bàng</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Phòng Hướng dẫn chỉ đạo về phòng cháy</td>
-                                            <td>664 Đại lộ Bình Dương, phường Hiệp Thành, thành phố Thủ Dầu Một (ĐT: 0693.509.917; Fax: 0650.3.872.456)</td>
-                                            <td></td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                                <div class="row item">
+                                    <div class="col-sm-12 right-content">
+                                        <a href="news-and-events-detail.html" class="title"><h5>HỘI NGHỊ TẬP HUẤN TRIỂN KHAI MẠNG TIN HỌC NỘI BỘ NGHÀNH CÔNG AN.</h5></a>
+                                        <span class="date">01/01/2016</span>
+                                        <p class="content">Ngày 17/4/2014 Cảnh sát PC&CC tỉnh Bình Dương đã tổ chức hội nghị tập huấn triển khai mạng tin học nội bộ nghành công an tại Cảnh sát PC&CC tỉnh Bình Dương. Nhằm tăng cường sử dụng văn bản điện tử như một hoạt động cải cách hành chính, phát triển Chính phủ điện tử […]</p>
+                                    </div>
+                                    <div class="read-more">
+                                        <a href="news-and-events-detail.html">Xem chi tiết <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+
+                                <div class="row item">
+                                    <div class="col-sm-12 right-content">
+                                        <a href="news-and-events-detail.html" class="title"><h5>HỘI NGHỊ TẬP HUẤN TRIỂN KHAI MẠNG TIN HỌC NỘI BỘ NGHÀNH CÔNG AN.</h5></a>
+                                        <span class="date">01/01/2016</span>
+                                        <p class="content">Ngày 17/4/2014 Cảnh sát PC&CC tỉnh Bình Dương đã tổ chức hội nghị tập huấn triển khai mạng tin học nội bộ nghành công an tại Cảnh sát PC&CC tỉnh Bình Dương. Nhằm tăng cường sử dụng văn bản điện tử như một hoạt động cải cách hành chính, phát triển Chính phủ điện tử […]</p>
+                                    </div>
+                                    <div class="read-more">
+                                        <a href="news-and-events-detail.html">Xem chi tiết <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div>
+                                <ul class="pagination">
+                                  <li class="disabled"><a href="#">«</a></li>
+                                  <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
+                                  <li><a href="#">2</a></li>
+                                  <li><a href="#">3</a></li>
+                                  <li><a href="#">4</a></li>
+                                  <li><a href="#">5</a></li>
+                                  <li><a href="#">»</a></li>
+                                </ul>
                             </div>
                         </div>
                     </div>
