--- a/pccc/index.html
+++ b/pccc/index.html
@@ -33,21 +33,7 @@
 </head>
 <body>
     
-    <div class="container main-container">
-        <div class="left-banner-wrapper">
-            <div class="left-banner">
-                <img src="dist/images/sticky1.png" alt="">
-                <img src="dist/images/sticky2.png" alt="">
-            </div>
-        </div>
-
-        <div class="right-banner-wrapper">
-            <div class="right-banner">
-                <img src="dist/images/sticky3.png" alt="">
-                <img src="dist/images/sticky4.png" alt="">
-            </div>
-        </div>
-
+    <div class="container">
         <div class=" row top-banner">
             <object width="100%" height="100%" align="middle">
             <param name="movie" value="dist/images/banner_pccc_0810.swf"/>
@@ -143,6 +129,15 @@
                     </div><!--/.nav-collapse -->
                 </div><!--/.container-fluid -->
             </nav>
+
+            <div class="left-banner">
+                <img src="dist/images/sticky1.png" alt="">
+                <img src="dist/images/sticky2.png" alt="">
+            </div>
+            <div class="right-banner">
+                <img src="dist/images/sticky3.png" alt="">
+                <img src="dist/images/sticky4.png" alt="">
+            </div>
         </div>
 
         <div class=" row search-box">
