--- a/pccc/documents.html
+++ b/pccc/documents.html
@@ -34,19 +34,9 @@
 <body>
     <div class="container">
         <div class=" row top-banner">
-            <object width="100%" height="100%" align="middle">
-            <param name="movie" value="dist/images/banner_pccc_0810.swf"/>
-            <!--[if !IE]>-->
-            <object type="application/x-shockwave-flash" data="dist/images/banner_pccc_0810.swf" width="800" height="600">
-                <param name="wmode" value="transparent"/>
-                <param name="movie" value="assets/images/flash-demo.swf"/>
-                <!--<![endif]-->
-                <a href="//www.adobe.com/go/getflash">
-                    <img src="//www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player"/>
-                </a>
-            <!--[if !IE]>-->
-            </object>
-            <!--<![endif]-->
+            <object type="application/x-shockwave-flash" data="dist/images/banner_pccc_0810.swf" width="0" height="0">
+                <param name="movie" value="dist/images/banner_pccc_0810.swf" />
+                <param name="quality" value="high"/>
             </object>
         </div>
 
