--- a/towndeli/index.html
+++ b/towndeli/index.html
@@ -113,6 +113,7 @@
                         </div>
                     </div>
                     <div class="wrap-input">
+                        <span><i class="fa fa-mobile" aria-hidden="true"></i></span>
                         <input type="text" placeholder="Số điện thoại" />
                     </div>
                     <div class="wrap-input">
