--- a/towndeli/tracking4.html
+++ b/towndeli/tracking4.html
@@ -99,6 +99,7 @@
                         </div>
                     </div>
                     <div class="wrap-input">
+                        <span><i class="fa fa-mobile" aria-hidden="true"></i></span>
                         <input type="text" placeholder="Số điện thoại" />
                     </div>
                     <div class="wrap-input">
