--- a/towndeli/schedule.html
+++ b/towndeli/schedule.html
@@ -118,7 +118,7 @@
     </div>
 </div>
 
-<div class="modal fade edit-schedule-modal" tabindex="-1">
+<div class="modal fade edit-schedule-modal">
     <div class="modal-dialog modal-md">
         <div class="modal-content">
             <div class="modal-header">
@@ -199,7 +199,7 @@
     </div>
 </div>
 
-<div class="modal fade remove-schedule-modal" tabindex="-1">
+<div class="modal fade remove-schedule-modal">
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
