Fix issues Towdeli

--- a/towndeli/schedule.html
+++ b/towndeli/schedule.html
@@ -574,9 +574,9 @@
                 <div class="col-sm-2">
                     <div class="cat-menu">
                         <ul>
-                            <li class="active"><a href="profile.html">My Profile</a></li>
+                            <li><a href="profile.html">My Profile</a></li>
                             <li><a href="point.html">My Point</a></li>
-                            <li><a>My Schedule</a></li>
+                            <li class="active"><a>My Schedule</a></li>
                             <li><a>My Order</a></li>
                         </ul>
                     </div>
