Fix issues pccc

--- a/pccc/intro.html
+++ b/pccc/intro.html
@@ -320,7 +320,10 @@
         </div>
     </div>
 
-    <div class="scrollToTop"></div>
+    <div class="scrollToTop">
+        <div class="icon"></div>
+        <span class="text">Lên đầu trang</span>
+    </div>
 <script type="text/javascript" src="dist/scripts/main.js?v=1.1.1"></script>
 </body>
 </html>
