--- a/setfilhome/products.html
+++ b/setfilhome/products.html
@@ -57,11 +57,10 @@
                 </div>
             </nav>
             <div>
-                <a href="products.html#content">products</a>
+                <h1>Products content</h1>   
             </div>
           </section>
     </div>
 <script type="text/javascript" src="dist/scripts/main.js?v=1.1.1"></script>
 </body>
 </html>
-
