--- a/setfilhome/projects.html
+++ b/setfilhome/projects.html
@@ -32,7 +32,7 @@
 
 </head>
 <body>
-<div id="projectPage">
+<div id="projectsPage">
     <section class="vertical-scrolling section-2">
         <nav class="top-nav">
             <div class="nav-wrapper">
