--- a/setfilhome/index.html
+++ b/setfilhome/index.html
@@ -32,7 +32,7 @@
 
 </head>
 <body>
-<div id="fullpage">
+<div id="homePage">
     <section class="vertical-scrolling section-1">
         <img src="dist/images/logo_main.png" alt="">
         <div class="scroll-icon">
@@ -42,24 +42,10 @@
             </div>
         </div>
     </section>
+    <!--
     <section class="vertical-scrolling section-2">
-        <nav>
-            <div class="nav-wrapper">
-                <div class="left-content">
-                    <a class="menu-icon"><i class="material-icons">menu</i></a>
-                    <span class="title">PROJECT</span>
-                </div>
-                <a href="#" class="brand-logo center">Setfilhome</a>
-                <div class="right-content">
-                    <a>EN</a>
-                    <a>VN</a>
-                </div>
-            </div>
-        </nav>
-        <div>
-            <a href="products.html#content">products</a>
-        </div>
     </section>
+    -->
 </div>
 <script type="text/javascript" src="dist/scripts/main.js?v=1.1.1"></script>
 </body>
