--- a/setfilhome/links.html
+++ b/setfilhome/links.html
@@ -32,7 +32,7 @@
 <body>
 <ol>
     <li><a target="_blank" href="index.html">index.html</a></li>
-    <li><a target="_blank" href="projects.html#content">projects.html</a></li>
+    <li><a target="_blank" href="projects.html">projects.html</a></li>
 </ol>
 </body>
 </html>
