--- a/setfilhome/projects.html
+++ b/setfilhome/projects.html
@@ -52,7 +52,7 @@
             <div id="mainSideNav" class="main-sile-nav">
                 <a href="#"><span class="element underline-opening">home</span></a>
                 <a href="#" class="active"><span class="element underline-opening">project</span></a>
-                <a href="#"><span class="element underline-opening">produt</span></a>
+                <a href="#"><span class="element underline-opening">product</span></a>
                 <a href="#"><span class="element underline-opening">about us</span></a>
                 <a href="#"><span class="element underline-opening">contact</span></a>
             </div>
