--- a/setfilhome/contact.html
+++ b/setfilhome/contact.html
@@ -43,7 +43,7 @@
                 </div>
                 <a href="#" class="brand-logo center"><img src="dist/images/logo_on_nav.png" alt=""></a>
                 <div class="right-content">
-                    <a>EN</a>
+                    <a class="active">EN</a>
                     <a>VN</a>
                 </div>
             </div>
