--- a/setfilhome/contact.html
+++ b/setfilhome/contact.html
@@ -112,6 +112,10 @@
         </div>
     </section>
 </div>
+
+<div class="footer">
+    <h4 class="copyright">&copy; SETFILHOME. All Rights Reserved</h4>
+</div>
 <script type="text/javascript" src="dist/scripts/main.js?v=1.1.1"></script>
 </body>
 </html>
