--- a/setfilhome/links.html
+++ b/setfilhome/links.html
@@ -34,7 +34,7 @@
     <li><a target="_blank" href="index.html">index.html</a></li>
     <li><a target="_blank" href="projects.html">projects.html</a></li>
     <li><a target="_blank" href="project-detail.html">project-detail.html</a></li>
-    <li><a target="_blank" href="product-detail.html">product-detail.html</a></li>
+    <li><a target="_blank" href="products.html">products.html</a></li>
     <li><a target="_blank" href="about-us.html">about-us.html</a></li>
     <li><a target="_blank" href="contact.html">contact.html</a></li>
 </ol>
