--- a/setfilhome/products.html
+++ b/setfilhome/products.html
@@ -71,40 +71,64 @@
                                 <img src="dist/images/product1.png" data-index="1" data-related="2-5-6"/>
                                 <div class="title"><h4 class="element underline-left">View Detail</h4></div>
                             </div>
+                            <div class="preview hidden" data-index="1">
+                                <img src="dist/images/product1.png"/>
+                            </div>
 
                             <div class="col-md-3 img-wrapper" data-index="2" data-related="3-6-7">
                                 <img src="dist/images/product2.png" data-index="2" data-related="3-6-7"/>
                                 <div class="title"><h4 class="element underline-left">View Detail</h4></div>
+                            </div>
+                            <div class="preview hidden" data-index="2">
+                                <img src="dist/images/product2.png"/>
                             </div>
 
                             <div class="col-md-3 img-wrapper" data-index="3" data-related="2-6-7">
                                 <img src="dist/images/product3.png" data-index="3" data-related="2-6-7"/>
                                 <div class="title"><h4 class="element underline-left">View Detail</h4></div>
                             </div>
+                            <div class="preview hidden" data-index="3">
+                                <img src="dist/images/product3.png"/>
+                            </div>
 
                             <div class="col-md-3 img-wrapper" data-index="4" data-related="3-7-8">
                                 <img src="dist/images/product4.png" data-index="4" data-related="3-7-8"/>
                                 <div class="title"><h4 class="element underline-left">View Detail</h4></div>
+                            </div>
+                            <div class="preview hidden" data-index="4">
+                                <img src="dist/images/product4.png"/>
                             </div>
 
                             <div class="col-md-3 img-wrapper" data-index="5" data-related="1-2-6">
                                 <img src="dist/images/product5.png" data-index="5" data-related="1-2-6"/>
                                 <div class="title"><h4 class="element underline-left">View Detail</h4></div>
                             </div>
+                            <div class="preview hidden" data-index="5">
+                                <img src="dist/images/product5.png"/>
+                            </div>
 
                             <div class="col-md-3 img-wrapper" data-index="6" data-related="2-3-7">
                                 <img src="dist/images/product6.png" data-index="6" data-related="2-3-7"/>
                                 <div class="title"><h4 class="element underline-left">View Detail</h4></div>
+                            </div>
+                            <div class="preview hidden" data-index="6">
+                                <img src="dist/images/product6.png"/>
                             </div>
 
                             <div class="col-md-3 img-wrapper" data-index="7" data-related="2-3-6">
                                 <img src="dist/images/product7.png" data-index="7" data-related="2-3-6"/>
                                 <div class="title"><h4 class="element underline-left">View Detail</h4></div>
                             </div>
+                            <div class="preview hidden" data-index="7">
+                                <img src="dist/images/product7.png"/>
+                            </div>
 
                             <div class="col-md-3 img-wrapper" data-index="8" data-related="3-4-7">
                                 <img src="dist/images/product1.png" data-index="8" data-related="3-4-7"/>
                                 <div class="title"><h4 class="element underline-left">View Detail</h4></div>
+                            </div>
+                            <div class="preview hidden" data-index="8">
+                                <img src="dist/images/product1.png"/>
                             </div>
                         </div>
                     </div>
