--- a/setfilhome/about-us.html
+++ b/setfilhome/about-us.html
@@ -37,8 +37,8 @@
         <nav class="top-nav">
             <div class="nav-wrapper">
                 <div class="left-content">
-                    <a id="openMenuIcon" class="menu-icon"><i class="material-icons">menu</i><span class="title">PRODUCT</span></a>
-                    <a id="closeMenuIcon" class="menu-icon hidden"><i class="material-icons">close</i><span class="title">PRODUCT</span></a>
+                    <a id="openMenuIcon" class="menu-icon"><i class="material-icons">menu</i><span class="title">ABOUT US</span></a>
+                    <a id="closeMenuIcon" class="menu-icon hidden"><i class="material-icons">close</i><span class="title">ABOUT US</span></a>
                     
                 </div>
                 <a href="#" class="brand-logo center"><img src="dist/images/logo_on_nav.png" alt=""></a>
