--- a/setfilhome/about-us.html
+++ b/setfilhome/about-us.html
@@ -76,7 +76,12 @@
                         <p>Công ty Cổ phần Thiết kế Kiến trúc và Nội thất Setfil (Setfilhome) là một doanh nghiệp trực thuộc hệ thống Setfil Group. Setfilhome là doanh nghiệp hàng đầu hoạt động trong lĩnh vực thiết kế và cung cấp nội thất tại thị trường Việt Nam. Cùng với đội ngũ kiến trúc sư đam mê đầy nhiệt huyết và sự cộng tác của các chuyên gia đầu ngành trong lĩnh vực thiết kế kiến trúc nội thất, Setfilhome đã mang lại nhiều không gian sống và làm việc lý tưởng cho khách hàng. Chúng tôi luôn cập nhật các dòng sản phẩm tốt nhất, phù hợp với xu hướng cuộc sống hiện đại nhằm nâng cao giá trị cuộc sống cuả khách hàng.</p>
                     </div>
                     <div class="row social-network">
-                        <h6 class="follow-us">follow us</h6>
+                        <div class="follow-us">follow us</div>
+                        <div class="network hidden">
+                            <span class="fb"></span>
+                            <span class="in"></span>
+                            <span class="tw"></span>
+                        </div>
                     </div>
                 </div>
             </div>
