--- a/setfilhome/projects.html
+++ b/setfilhome/projects.html
@@ -56,110 +56,6 @@
                 <a href="#"><span class="element underline-opening">about us</span></a>
                 <a href="#"><span class="element underline-opening">contact</span></a>
             </div>
-            <!--<div id="grid-gallery" class="grid-gallery">-->
-                <!--<section class="grid-wrap">-->
-                    <!--<ul class="grid">-->
-                        <!--<li class="grid-sizer"></li>&lt;!&ndash; for Masonry column width &ndash;&gt;-->
-                        <!--<li>-->
-                            <!--<a href="#img01">-->
-                                <!--<figure>-->
-                                    <!--<img src="dist/images/bg1.jpg" alt="img01"/>-->
-                                    <!--<div class="title"><h4 class="element underline-left">Title Text!</h4></div>-->
-                                <!--</figure>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="#img01">-->
-                                <!--<figure>-->
-                                    <!--<img src="dist/images/project2.png" alt="img02"/>-->
-                                    <!--<div class="title"><h4 class="element underline-left">Title Text!</h4></div>-->
-                                <!--</figure>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="#img01">-->
-                                <!--<figure>-->
-                                    <!--<img src="dist/images/project3.png" alt="img03"/>-->
-                                    <!--<div class="title"><h4 class="element underline-left">Title Text!</h4></div>-->
-                                <!--</figure>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="#img01">-->
-                                <!--<figure>-->
-                                    <!--<img src="dist/images/project5.png" alt="img05"/>-->
-                                    <!--<div class="title"><h4 class="element underline-left">Title Text!</h4></div>-->
-                                <!--</figure>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="#img01">-->
-                                <!--<figure>-->
-                                    <!--<img src="dist/images/project6.png" alt="img06"/>-->
-                                    <!--<div class="title"><h4 class="element underline-left">Title Text!</h4></div>-->
-                                <!--</figure>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="#img01">-->
-                                <!--<figure>-->
-                                    <!--<img src="dist/images/project4.png" alt="img04"/>-->
-                                    <!--<div class="title"><h4 class="element underline-left">Title Text!</h4></div>-->
-                                <!--</figure>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="#img01">-->
-                                <!--<figure>-->
-                                    <!--<img src="dist/images/project5.png" alt="img05"/>-->
-                                    <!--<div class="title"><h4 class="element underline-left">Title Text!</h4></div>-->
-                                <!--</figure>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="#img01">-->
-                                <!--<figure>-->
-                                    <!--<img src="dist/images/project6.png" alt="img06"/>-->
-                                    <!--<div class="title"><h4 class="element underline-left">Title Text!</h4></div>-->
-                                <!--</figure>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="#img01">-->
-                                <!--<figure>-->
-                                    <!--<img src="dist/images/project2.png" alt="img02"/>-->
-                                    <!--<div class="title"><h4 class="element underline-left">Title Text!</h4></div>-->
-                                <!--</figure>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="#img01">-->
-                                <!--<figure>-->
-                                    <!--<img src="dist/images/project3.png" alt="img03"/>-->
-                                    <!--<div class="title"><h4 class="element underline-left">Title Text!</h4></div>-->
-                                <!--</figure>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="#img01">-->
-                                <!--<figure>-->
-                                    <!--<img src="dist/images/project4.png" alt="img04"/>-->
-                                    <!--<div class="title"><h4 class="element underline-left">Title Text!</h4></div>-->
-                                <!--</figure>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                        <!--<li>-->
-                            <!--<a href="#img01">-->
-                                <!--<figure>-->
-                                    <!--<img src="dist/images/project6.png" alt="img06"/>-->
-                                    <!--<div class="title"><h4 class="element underline-left">Title Text!</h4></div>-->
-                                <!--</figure>-->
-                            <!--</a>-->
-                        <!--</li>-->
-                    <!--</ul>-->
-                <!--</section>-->
-            <!--</div>-->
-
             <div class="right-content">
                 <div id="gallery">
                     <a href="#">
@@ -171,12 +67,12 @@
                     <a href="#">
                         <img alt="Peppers"
                              src="dist/images/project2.png"
-                             data-image="dist/images/project2.png"
+                             data-image="dist/images/product2.jpg"
                              data-description="<span class='element underline-left'>Title Text</span>">
                     </a>
                     <a href="#">
                         <img alt="Peppers"
-                             src="dist/images/project3.png"
+                             src="dist/images/product1.jpg"
                              data-image="dist/images/project3.png"
                              data-description="<span class='element underline-left'>Title Text</span>">
                     </a>
@@ -188,7 +84,7 @@
                     </a>
                     <a href="#">
                         <img alt="Peppers"
-                             src="dist/images/project5.png"
+                             src="dist/images/product1.jpg"
                              data-image="dist/images/project5.png"
                              data-description="<span class='element underline-left'>Title Text</span>">
                     </a>
@@ -207,12 +103,12 @@
                     <a href="#">
                         <img alt="Peppers"
                              src="dist/images/project2.png"
-                             data-image="dist/images/project2.png"
+                             data-image="dist/images/product2.jpg"
                              data-description="<span class='element underline-left'>Title Text</span>">
                     </a>
                     <a href="#">
                         <img alt="Peppers"
-                             src="dist/images/project3.png"
+                             src="dist/images/product1.jpg"
                              data-image="dist/images/project3.png"
                              data-description="<span class='element underline-left'>Title Text</span>">
                     </a>
@@ -224,7 +120,7 @@
                     </a>
                     <a href="#">
                         <img alt="Peppers"
-                             src="dist/images/project5.png"
+                             src="dist/images/product1.jpg"
                              data-image="dist/images/project5.png"
                              data-description="<span class='element underline-left'>Title Text</span>">
                     </a>
@@ -243,12 +139,12 @@
                     <a href="#">
                         <img alt="Peppers"
                              src="dist/images/project2.png"
-                             data-image="dist/images/project2.png"
+                             data-image="dist/images/product2.jpg"
                              data-description="<span class='element underline-left'>Title Text</span>">
                     </a>
                     <a href="#">
                         <img alt="Peppers"
-                             src="dist/images/project3.png"
+                             src="dist/images/product1.jpg"
                              data-image="dist/images/project3.png"
                              data-description="<span class='element underline-left'>Title Text</span>">
                     </a>
