--- a/setfilhome/index.html
+++ b/setfilhome/index.html
@@ -59,10 +59,10 @@
 //        firstTransitionDuration: 12000,
 //        transition: ['zoomOut'],
         transitionRegister: [ 'kha'],
-//        animationRegister: [ 'kha_ami' ],
+        animationRegister: [ 'kha-ani' ],
         transition: [ 'kha'],
-//        animation: 'kha_ami',
-//        animationDuration: 5000,
+        animation: 'kha-ani',
+//        animationDuration: 1000,
         transitionDuration: 7000,
         slides: [
                 { src: './dist/images/bg1.jpg' },
